force-app/main/default/objects/ADM_Work__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age is the difference between now and when the record was created if the record has not been resolved; otherwise, age is the difference between now and when the record was resolved. The age is removed once the record is closed.</description>
    <formula>IF(
    ISNULL(Resolved_On__c), (NOW() - Created_On_import__c),
    IF(
        ISNULL(Closed_On__c), (NOW() - Resolved_On__c), null
    )
)</formula>
    <inlineHelpText>Age is the difference between now and when the record was created if the record has not been resolved; otherwise, age is the difference between now and when the record was resolved. The age is removed once the record is closed.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>