force-app/main/default/objects/ADM_Work__c/fields/Age_With_Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Age_With_Scrum_Team__c</fullName>
    <description>Age with Scrum Team is the difference between now and the last time the Scrum Team field was modified. This calculation excludes weekends.</description>
    <formula>IF(ISNULL(Scrum_Team_Last_Modified__c), null,
CASE(MOD( TODAY() - DATE(1985,6,24),7),
0 , CASE( MOD( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
1 , CASE( MOD( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) ,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
2 , CASE( MOD( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
4 , CASE( MOD( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,4,5,4,6,4,0),
5 , CASE( MOD( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) ,7),1,0,2,1,3,2,4,3,5,4,6,0,0),
6 , CASE( MOD( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
999)
+
(FLOOR(( TODAY() - DATEVALUE(Scrum_Team_Last_Modified__c) )/7)*5)
)</formula>
    <inlineHelpText>Age with Scrum Team is the difference between now and the last time the Scrum Team field was modified. This calculation excludes weekends.</inlineHelpText>
    <label>Age With Scrum Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>