force-app/main/default/objects/ADM_Work__c/fields/Apex_Hammer_Compile_Failure__c.field-meta.xml
<CustomField>
    <fullName>Apex_Hammer_Compile_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Hammer Compile Failure</label>
    <type>Checkbox</type>
</CustomField>