force-app/main/default/objects/ADM_Work__c/fields/Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>Assigned_On__c</fullName>
    <description>Deprecated field for bugforce 1.0</description>
    <label>Assigned On</label>
    <type>Date</type>
</CustomField>