force-app/main/default/objects/ADM_Work__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you leave this field empty on save you will be the Assignee.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignee</relationshipName>
    <type>Lookup</type>
</CustomField>