force-app/main/default/objects/ADM_Work__c/fields/Assignees__c.field-meta.xml
<CustomField>
    <fullName>Assignees__c</fullName>
    <description>This field is used as a transport object. Do not use this field on list view criteria or reports!</description>
    <inlineHelpText>Assignees of this work record receive email on save.</inlineHelpText>
    <label>transfer Assignees</label>
    <length>80</length>
    <type>Text</type>
</CustomField>