force-app/main/default/objects/ADM_Work__c/fields/Auto_Build__c.field-meta.xml
<CustomField>
    <fullName>Auto_Build__c</fullName>
    <description>Used for Test Failures only to help build masters create reports.  Will be deprecated in favor of a normalized data model in a later version</description>
    <label>Auto Build</label>
    <length>255</length>
    <type>Text</type>
</CustomField>