force-app/main/default/objects/ADM_Work__c/fields/Backburner_Rank__c.field-meta.xml
<CustomField>
    <fullName>Backburner_Rank__c</fullName>
    <label>Backburner Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>