force-app/main/default/objects/ADM_Work__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Used for Test Failures only to help build masters create reports.  Will be deprecated in favor of a normalized data model in a later version</description>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>