force-app/main/default/objects/ADM_Work__c/fields/Budget_ID__c.field-meta.xml
<CustomField>
    <fullName>Budget_ID__c</fullName>
    <description>This is an ID that is used by the TechOps team to identify a budget line item for a specific user story.</description>
    <inlineHelpText>ID used to identify a budget line item for a story (used by TechOps).</inlineHelpText>
    <label>Budget ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>