force-app/main/default/objects/ADM_Work__c/fields/Bug_Number__c.field-meta.xml
<CustomField>
    <fullName>Bug_Number__c</fullName>
    <label>Bugforce #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>