force-app/main/default/objects/ADM_Work__c/fields/Capex_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Capex_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Facing Feature</label>
    <type>Checkbox</type>
</CustomField>