force-app/main/default/objects/ADM_Work__c/fields/Child_ID__c.field-meta.xml
<CustomField>
    <fullName>Child_ID__c</fullName>
    <label>Child_ID</label>
    <length>99</length>
    <type>Text</type>
</CustomField>