force-app/main/default/objects/ADM_Work__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>CASE(  Status__c, &quot;Tested&quot;, 1, &quot;Closed&quot;, 1, &quot;Closed-Untested&quot;, 1, &quot;Closed-U/Ftest&quot;, 1, &quot;Completed&quot;, 1, &quot;Not Reproducible&quot;, 1, &quot;Never&quot;, 1, &quot;Not a bug&quot;, 1, &quot;Duplicate&quot;, 1, &quot;Closed - Duplicate&quot; , 1, &quot;Closed - Known Bug Exists&quot;, 1, &quot;Closed - New Bug Logged&quot;, 1, &quot;Closed - No Fix - Working as Designed&quot;,1, &quot;Closed - No Fix - Feature Request&quot;,1, &quot;Closed - No Fix - Will Not Fix&quot;,1, &quot;Closed - LAP Request Approved&quot;, 1, &quot;Closed - LAP Request Denied&quot;, 1, &quot;Closed - Resolved Without Code Change&quot;, 1, &quot;Rejected&quot;, 1, &quot;Closed - Resolved With Internal Tools&quot;, 1, &quot;Closed - Defunct&quot;,1,&quot;Closed - Doc/Usability&quot;,1,&quot;Closed - Resolved with DB Script&quot;,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>