force-app/main/default/objects/ADM_Work__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <label>Closed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>