force-app/main/default/objects/ADM_Work__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color</label>
    <referenceTo>ADM_Color__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>