force-app/main/default/objects/ADM_Work__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Column</label>
    <referenceTo>ADM_Column__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>