force-app/main/default/objects/ADM_Work__c/fields/Column_Rank__c.field-meta.xml
<CustomField>
    <fullName>Column_Rank__c</fullName>
    <label>Column Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>