force-app/main/default/objects/ADM_Work__c/fields/Comment_Copy__c.field-meta.xml
<CustomField>
    <fullName>Comment_Copy__c</fullName>
    <label>Comment Copy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>