force-app/main/default/objects/ADM_Work__c/fields/Complete_By__c.field-meta.xml
<CustomField>
    <fullName>Complete_By__c</fullName>
    <label>Complete By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Feb 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Mar 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Apr 2009 sprint</fullName>
            </value>
            <value>
                <fullName>May 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Jun 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Jul 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Aug 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Sep 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Oct 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Nov 2009 sprint</fullName>
            </value>
            <value>
                <fullName>Dec 2009 sprint</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>