force-app/main/default/objects/ADM_Work__c/fields/Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Completed_Hours__c</fullName>
    <description>Total of Actual hours on all the child tasks associated to this work-item</description>
    <label>Completed Hours</label>
    <summarizedField>ADM_Task__c.Actual_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>ADM_Task__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ADM_Task__c.Work__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>