force-app/main/default/objects/ADM_Work__c/fields/Created_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_On_Date__c</fullName>
    <formula>IF( ISNULL( Created_On_import__c ) ,  DATEVALUE( CreatedDate ) ,  DATEVALUE( Created_On_import__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created On Date</label>
    <type>Date</type>
</CustomField>