force-app/main/default/objects/ADM_Work__c/fields/Critical_CRM_Feature__c.field-meta.xml
<CustomField>
    <fullName>Critical_CRM_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical CRM Feature or Org Inaccessible</label>
    <type>Checkbox</type>
</CustomField>