force-app/main/default/objects/ADM_Work__c/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <label>Customer Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>