force-app/main/default/objects/ADM_Work__c/fields/Data_Silo_Test_Affected__c.field-meta.xml
<CustomField>
    <fullName>Data_Silo_Test_Affected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Silo Test Affected</label>
    <type>Checkbox</type>
</CustomField>