force-app/main/default/objects/ADM_Work__c/fields/Deal_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Deal_at_Risk__c</fullName>
    <label>Deal at Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>New &amp; Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>