force-app/main/default/objects/ADM_Work__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <label>Dependencies</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>