force-app/main/default/objects/ADM_Work__c/fields/Dependents__c.field-meta.xml
<CustomField>
    <fullName>Dependents__c</fullName>
    <description>This field will be updated by Apex triggers on CRUD operations of Dependency objects. The number will reflect the count of User Stories that are dependent on the given Story.</description>
    <label>Dependents</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>