force-app/main/default/objects/ADM_Work__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>User type (As a...) Goal (I want to...) Reason (so that...) Additional Details</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>