force-app/main/default/objects/ADM_Work__c/fields/Details_and_Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Details_and_Steps_to_Reproduce__c</fullName>
    <inlineHelpText>Text contents of this field will be sent in initial record creation only</inlineHelpText>
    <label>Details and Steps to Reproduce</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>