force-app/main/default/objects/ADM_Work__c/fields/Email_On_Save__c.field-meta.xml
<CustomField>
    <fullName>Email_On_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to send an email to the users in the To: field when you save this record.</inlineHelpText>
    <label>Email On Save</label>
    <type>Checkbox</type>
</CustomField>