force-app/main/default/objects/ADM_Work__c/fields/Email_On_Save_Copy__c.field-meta.xml
<CustomField>
    <fullName>Email_On_Save_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email On Save Copy</label>
    <type>Checkbox</type>
</CustomField>