force-app/main/default/objects/ADM_Work__c/fields/Email_Subscription_Queue__c.field-meta.xml
<CustomField>
    <fullName>Email_Subscription_Queue__c</fullName>
    <formula>IF( Email_Subscription_ID__c = &quot;&quot; , &quot;&quot;, HYPERLINK(&quot;/p/own/Queue/d?id=&quot; &amp; Email_Subscription_ID__c , Email_Subscription_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Subscription Queue</label>
    <type>Text</type>
</CustomField>