force-app/main/default/objects/ADM_Work__c/fields/Encoded_Recipients_Txt_Area__c.field-meta.xml
<CustomField>
    <fullName>Encoded_Recipients_Txt_Area__c</fullName>
    <label>Encoded Recipients</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>