force-app/main/default/objects/ADM_Work__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Epic</label>
    <referenceTo>ADM_Epic__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>