force-app/main/default/objects/ADM_Work__c/fields/Epic_Name__c.field-meta.xml
<CustomField>
    <fullName>Epic_Name__c</fullName>
    <formula>Epic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Epic Name</label>
    <type>Text</type>
</CustomField>