force-app/main/default/objects/ADM_Work__c/fields/Escalation_Point__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Point__c</fullName>
    <label>Escalation Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>