force-app/main/default/objects/ADM_Work__c/fields/Estimated_Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Financial_Impact__c</fullName>
    <label>Estimated Financial Impact</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>