force-app/main/default/objects/ADM_Work__c/fields/Executive_Involved__c.field-meta.xml
<CustomField>
    <fullName>Executive_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Involved</label>
    <type>Checkbox</type>
</CustomField>