force-app/main/default/objects/ADM_Work__c/fields/Found_In_Build_Copy__c.field-meta.xml
<CustomField>
    <fullName>Found_In_Build_Copy__c</fullName>
    <label>Found In Build Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>