force-app/main/default/objects/ADM_Work__c/fields/Found_In_Build_Name__c.field-meta.xml
<CustomField>
    <fullName>Found_In_Build_Name__c</fullName>
    <formula>Found_in_Build__r.Name</formula>
    <label>Found In Build Name</label>
    <type>Text</type>
</CustomField>