force-app/main/default/objects/ADM_Work__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Frequency reflects how often the target user will encounter the issue.</inlineHelpText>
    <label>Frequency</label>
    <referenceTo>ADM_Frequency__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>