force-app/main/default/objects/ADM_Work__c/fields/Frequency_Name__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Name__c</fullName>
    <formula>Frequency__r.Name</formula>
    <label>Frequency Name</label>
    <type>Text</type>
</CustomField>