force-app/main/default/objects/ADM_Work__c/fields/ftest__c.field-meta.xml
<CustomField>
    <fullName>ftest__c</fullName>
    <inlineHelpText>Document the name of the automated test to prevent this bug happenning again.</inlineHelpText>
    <label>test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>