force-app/main/default/objects/ADM_Work__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal (I want to...)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>