force-app/main/default/objects/ADM_Work__c/fields/Has_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Has_Story_Points__c</fullName>
    <formula>IF(Story_Points__c &gt;= 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Has Story Points?</label>
    <type>Text</type>
</CustomField>