force-app/main/default/objects/ADM_Work__c/fields/Highlight__c.field-meta.xml
<CustomField>
    <fullName>Highlight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highlight</label>
    <type>Checkbox</type>
</CustomField>