force-app/main/default/objects/ADM_Work__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impact</label>
    <referenceTo>ADM_Impact__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>