force-app/main/default/objects/ADM_Work__c/fields/Impact_Name__c.field-meta.xml
<CustomField>
    <fullName>Impact_Name__c</fullName>
    <formula>Impact__r.Name</formula>
    <label>Impact Name</label>
    <type>Text</type>
</CustomField>