force-app/main/default/objects/ADM_Work__c/fields/Is_Ignorable__c.field-meta.xml
<CustomField>
    <fullName>Is_Ignorable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For internal use only.</description>
    <label>Is Ignorable</label>
    <type>Checkbox</type>
</CustomField>