force-app/main/default/objects/ADM_Work__c/fields/Is_Planned__c.field-meta.xml
<CustomField>
    <fullName>Is_Planned__c</fullName>
    <formula>if ( Partner_Plan__c !=null, &quot;Planned&quot;, &quot;Unplanned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Planned</label>
    <type>Text</type>
</CustomField>