force-app/main/default/objects/ADM_Work__c/fields/Is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>