force-app/main/default/objects/ADM_Work__c/fields/Known_Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>Known_Issue_ID__c</fullName>
    <label>Known Issue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>