force-app/main/default/objects/ADM_Work__c/fields/Known_Issue_Link__c.field-meta.xml
<CustomField>
    <fullName>Known_Issue_Link__c</fullName>
    <formula>IF(ISBLANK(Known_Issue_ID__c),&quot;No Known Issue&quot;,HYPERLINK(&quot;https://success.salesforce.com/issues_view?id=&quot; &amp; Known_Issue_ID__c, &quot;View Known Issue (&quot; &amp; TEXT(Known_Issue_Num_Reporting_Customers__c) &amp; &quot; reports)&quot;,&quot;_knownissue&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Known Issue Link</label>
    <type>Text</type>
</CustomField>