force-app/main/default/objects/ADM_Work__c/fields/Known_Issue_Num_Reporting_Customers__c.field-meta.xml
<CustomField>
    <fullName>Known_Issue_Num_Reporting_Customers__c</fullName>
    <description>The number of customers reporting this bug as a known issue</description>
    <label>KI Reporting Customers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>