force-app/main/default/objects/ADM_Work__c/fields/Last_Modified_By_Copy__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Copy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for email2gus in order to show who created a comment.</description>
    <label>Last Modified By Copy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work3</relationshipName>
    <type>Lookup</type>
</CustomField>