force-app/main/default/objects/ADM_Work__c/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated By</label>
    <type>Text</type>
</CustomField>